--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
-    "moment": "^2.22.2",
     "mongoose": "^5.3.1",
-    "spotify-web-api-js": "^1.1.1"
+    "querystring": "^0.2.0",
+    "request": "^2.88.0",
+    "spotify-web-api-node": "^4.0.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
