--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^5.3.1",
     "nouislider": "^12.1.0",
     "querystring": "^0.2.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "request": "^2.88.0",
     "spotify-web-api-node": "^4.0.0"
   },
@@ -28,6 +30,7 @@
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "autoprefixer": "^9.3.1",
     "babel-core": "^6.26.3",
