--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "Brandon Ireland",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "mongoose": "^5.3.1",
     "nouislider": "^12.1.0",
     "querystring": "^0.2.0",
