--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Brandon Ireland",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
