--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "Brandon Ireland",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
@@ -22,9 +21,10 @@
     "express-validator": "^5.3.0",
     "mongoose": "^5.3.1",
     "nouislider": "^12.1.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "querystring": "^0.2.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
     "request": "^2.88.0",
     "spotify-web-api-node": "^4.0.0"
   },
@@ -35,7 +35,6 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@fortawesome/fontawesome-free": "^5.5.0",
     "autoprefixer": "^9.3.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
