--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "country-data": "0.0.31",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
@@ -24,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
+    "passport-spotify": "^1.0.1",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "spotify-web-api-node": "^4.0.0"
