--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Brandon Ireland",
   "license": "ISC",
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
@@ -19,6 +20,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
+    "geoip-lite": "^1.3.5",
     "mongoose": "^5.3.1",
     "nouislider": "^12.1.0",
     "passport": "^0.4.0",
