--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/maps": "^0.5.5",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
@@ -22,12 +23,12 @@
     "express-validator": "^5.3.0",
     "geoip-lite": "^1.3.5",
     "mongoose": "^5.3.1",
-    "nouislider": "^12.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "passport-spotify": "^1.0.1",
     "querystring": "^0.2.0",
+    "request-promise": "^4.2.2",
     "spotify-web-api-node": "^4.0.0"
   },
   "devDependencies": {
