--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^5.3.0",
     "geoip-lite": "^1.3.5",
     "mongoose": "^5.3.1",
+    "ngeohash": "^0.6.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
